# Compiler

./: .gitignore  =4.48.0  README.md  classifyapp_dataprepare.ipynb  compilergym.ll  file.data  hand.ll  inst2vec_classifyapp copy.ipynb  inst2vec_classifyapp.ipynb  inst2vec_devmap.ipynb  inst2vec_for_devmap.ipynb  inst2vec_for_devmap_train.py  inst2vec_threadcoarsening.ipynb  ir2vec_devmap.ipynb  optimized.ll  paque-pointers  pyproject.toml  qsort.ll  requirement.txt  requirements.txt  requirements1.txt  run.sh
.ipynb_checkpoints/: classifyapp_dataprepare-checkpoint.ipynb  inst2vec_classifyapp-checkpoint.ipynb  inst2vec_devmap-checkpoint.ipynb  inst2vec_threadcoarsening-checkpoint.ipynb  ir2vec_threadcoarsening-checkpoint.ipynb  modernbert_devmap-checkpoint.ipynb  modernbert_threadcoarsening-checkpoint.ipynb
configs/: classification_train.yaml  inst2vec_modernbert_poj104_mlm_train.yaml  optseq_gen_train.yaml  passformer_optseq_seq2seq.yaml
data/anghabench/: qsort.c
src/: bert_mlm_train.py  compiler_gym_test.py  decoder_train.py  inst2vec_modernbert_mlm_train.py  llvm.py  llvm_opt_gen_train.py  main.py  mlm_modernbert_train.py  modernbert_mlm_train.py  observation_tests.py  preprocess_bitcode_to_llvm.py  test.ipynb  test.py  test_inst2vec.ipynb  test_tensorboard.py  tmp.bc  train_demo.py
src/data/: collect_ga_llvm_dataset.py  collect_ga_llvm_dataset_single.py
src/experiments/: device_mapping.ipynb  inst2vec_devmap copy.ipynb  (+2 more)
tmp/: 37902.ll  example.bc  optimized.bc  optimized.ll  output.ll  tmp58_mgwes.bc
yaml/: inst2vec_poj104_modernbert_train.yaml
(+71 files in other folders)
